Publish DOI Collections (#125)
* Initial skeleton and tests for CollectionHandler publishCollection

* Use DoiCollection to distinguish from existing collection idea.

* Adding DOI collection tables to hold their specialized info (banners and DOIs)

* Validating that the DOIs in a DOICollection publish request all come from Pennsieve.

* Checking that the DOIs in a DOI collection publish request are not unpublished.

* test for handling of unpublished DOI in a DOI collection pub request.

* Preparing to add DOI Collection info to GET dataset(s) responses.

* Fixing hardcoded embargo release dates in tests

* Start hooking DoiCollections into get datasets responses.

* Reject DOI collection publish requests that contain a DOI collection.

* Adding a DOI collection to GET /datasets tests.

* Adding a DOI collection to GET /dataset/{id} tests.

* Adding to migration comment.

* OpenAPI spec for finalizeDoiCollection and stub.

* Fixing Scala type of status. Fuller stubs.

* Finalizing DOICollection publish and tests

* Update test manifest file contents.

* FinalizeDOICollection return Bad Request if dataset version status is not InProgress.

* Some changes in response to review.
