# openapi/discover-service-internal.yml
@@ -12,7 +12,7 @@ servers:
 paths:
   "/health":
     get:
-      security: []
+      security: [ ]
       summary: healthcheck
       operationId: healthcheck
       x-scala-package: healthcheck
@@ -31,7 +31,7 @@ paths:
     get:
       summary: get the publishing status of all organization datasets
       security:
-        - Bearer: []
+        - Bearer: [ ]
       operationId: getStatuses
       x-scala-package: publish
       parameters:
@@ -70,7 +70,7 @@ paths:
     get:
       summary: get the publishing status of a dataset
       security:
-        - Bearer: []
+        - Bearer: [ ]
       operationId: getStatus
       x-scala-package: publish
       parameters:
@@ -114,7 +114,7 @@ paths:
     post:
       summary: publish a dataset to Discover
       security:
-        - Bearer: []
+        - Bearer: [ ]
       operationId: publish
       x-scala-package: publish
       parameters:
@@ -186,7 +186,7 @@ paths:
     post:
       summary: revise the metadata (name, description, etc) for a published dataset
       security:
-        - Bearer: []
+        - Bearer: [ ]
       operationId: revise
       x-scala-package: publish
       parameters:
@@ -243,7 +243,7 @@ paths:
     post:
       summary: release an embargoed dataset to Discover
       security:
-        - Bearer: []
+        - Bearer: [ ]
       operationId: release
       x-scala-package: publish
       parameters:
@@ -296,7 +296,7 @@ paths:
     post:
       summary: unpublish a dataset
       security:
-        - Bearer: []
+        - Bearer: [ ]
       operationId: unpublish
       x-scala-package: publish
       parameters:
@@ -356,7 +356,7 @@ paths:
       summary: creates a sponsored dataset, or updates the sponsorship info if it
         already exists
       security:
-        - Bearer: []
+        - Bearer: [ ]
       operationId: sponsorDataset
       x-scala-package: publish
       parameters:
@@ -417,7 +417,7 @@ paths:
     delete:
       summary: removes a sponsorship from a dataset
       security:
-        - Bearer: []
+        - Bearer: [ ]
       operationId: removeDatasetSponsor
       x-scala-package: publish
       parameters:
@@ -469,7 +469,7 @@ paths:
     post:
       summary: publish a release to Discover
       security:
-        - Bearer: []
+        - Bearer: [ ]
       operationId: publishRelease
       x-scala-package: release
       parameters:
@@ -526,7 +526,7 @@ paths:
     post:
       summary: finalize the publishing of a release to Discover
       security:
-        - Bearer: []
+        - Bearer: [ ]
       operationId: finalizeRelease
       x-scala-package: release
       parameters:
@@ -579,30 +579,130 @@ paths:
               schema:
                 type: string
 
+  "/collection/{collectionId}/publish":
+    post:
+      summary: publish a collection to Discover
+      security:
+        - Bearer: [ ]
+      operationId: publishDOICollection
+      x-scala-package: collection
+      parameters:
+        - name: collectionId
+          in: path
+          description: collection id
+          required: true
+          schema:
+            type: integer
+            format: int32
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/PublishDOICollectionRequest"
+        description: collection metadata
+        required: true
+      responses:
+        "201":
+          description: Created
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/PublishDOICollectionResponse"
+        "400":
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                type: string
+        "401":
+          description: Unauthorized
+        "403":
+          description: Forbidden
+          content:
+            application/json:
+              schema:
+                type: string
+        "500":
+          description: Internal error
+          content:
+            application/json:
+              schema:
+                type: string
+
+  "/collection/{collectionId}/finalize":
+    post:
+      summary: finalize the publishing of a collection to Discover
+      security:
+        - Bearer: [ ]
+      operationId: finalizeDOICollection
+      x-scala-package: collection
+      parameters:
+        - name: collectionId
+          in: path
+          description: collection id
+          required: true
+          schema:
+            type: integer
+            format: int32
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/FinalizeDOICollectionRequest"
+        description: collection publication data
+        required: true
+      responses:
+        "200":
+          description: Completed
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/FinalizeDOICollectionResponse"
+        "400":
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                type: string
+        "401":
+          description: Unauthorized
+        "403":
+          description: Forbidden
+          content:
+            application/json:
+              schema:
+                type: string
+        "500":
+          description: Internal error
+          content:
+            application/json:
+              schema:
+                type: string
+
   "/metrics/dataset/athena/download/sync":
     get:
-      security: []
+      security: [ ]
       summary: sync
       operationId: syncAthenaDownloads
       x-scala-package: sync
       description: sync the Datasets Downloads table with the Downloads recorded in Athena
       parameters:
-      - name: startDate
-        in: query
-        description: Date for the beginning of download sync
-        required: true
-        schema:
-          type: string
-          format: date
-          nullable: true
-      - name: endDate
-        in: query
-        description: Date for the end of download sync
-        required: true
-        schema:
-          type: string
-          format: date
-          nullable: true
+        - name: startDate
+          in: query
+          description: Date for the beginning of download sync
+          required: true
+          schema:
+            type: string
+            format: date
+            nullable: true
+        - name: endDate
+          in: query
+          description: Date for the end of download sync
+          required: true
+          schema:
+            type: string
+            format: date
+            nullable: true
       responses:
         "200":
           description: Success
@@ -947,6 +1047,141 @@ components:
         readmeKey:
           type: string
 
+    PublishDOICollectionRequest:
+      type: object
+      required:
+        - name
+        - description
+        - banners
+        - dois
+        - ownerId
+        - license
+        - contributors
+        - tags
+        - ownerNodeId
+        - ownerFirstName
+        - ownerLastName
+        - ownerOrcid
+        - collectionNodeId
+      properties:
+        name:
+          type: string
+        description:
+          type: string
+        banners:
+          description: at most 4 banner URLs
+          maxItems: 4
+          type: array
+          items:
+            type: string
+        dois:
+          description: the DOIs in the collection
+          minItems: 1
+          type: array
+          items:
+            type: string
+        ownerId:
+          type: integer
+          format: int32
+        license:
+          type: string
+          x-scala-type: com.pennsieve.models.License
+        contributors:
+          type: array
+          items:
+            $ref: "#/components/schemas/InternalContributor"
+        externalPublications:
+          type: array
+          items:
+            $ref: "#/components/schemas/InternalExternalPublication"
+        tags:
+          type: array
+          items:
+            type: string
+        ownerNodeId:
+          type: string
+        ownerFirstName:
+          type: string
+        ownerLastName:
+          type: string
+        ownerOrcid:
+          type: string
+        collectionNodeId:
+          type: string
+        bucketConfig:
+          $ref: "#/components/schemas/BucketConfig"
+
+    PublishDOICollectionResponse:
+      type: object
+      required:
+        - name
+        - sourceCollectionId
+        - publishedDatasetId
+        - publishedVersion
+        - status
+        - publicId
+      properties:
+        name:
+          type: string
+        sourceCollectionId:
+          type: integer
+          format: int32
+        publishedDatasetId:
+          type: integer
+          format: int32
+        publishedVersion:
+          type: integer
+          format: int32
+        status:
+          type: string
+          x-scala-type: com.pennsieve.models.PublishStatus
+        lastPublishedDate:
+          type: string
+          format: date-time
+        sponsorship:
+          $ref: "#/components/schemas/SponsorshipRequest"
+        publicId:
+          type: string
+
+    FinalizeDOICollectionRequest:
+      type: object
+      required:
+        - publishedDatasetId
+        - publishedVersion
+        - publishSuccess
+        - fileCount
+        - totalSize
+        - manifestKey
+        - manifestVersionId
+      properties:
+        publishedDatasetId:
+          type: integer
+          format: int32
+        publishedVersion:
+          type: integer
+          format: int32
+        publishSuccess:
+          type: boolean
+        fileCount:
+          type: integer
+          format: int64
+        totalSize:
+          type: integer
+          format: int64
+        manifestKey:
+          type: string
+        manifestVersionId:
+          type: string
+
+    FinalizeDOICollectionResponse:
+      type: object
+      required:
+        - status
+      properties:
+        status:
+          type: string
+          x-scala-type: com.pennsieve.models.PublishStatus
+
     DatasetPublishStatus:
       type: object
       required:
@@ -986,8 +1221,8 @@ components:
     InternalCollection:
       type: object
       required:
-      - id
-      - name
+        - id
+        - name
       properties:
         id:
           type: integer
@@ -998,7 +1233,7 @@ components:
     InternalExternalPublication:
       type: object
       required:
-      - doi
+        - doi
       properties:
         doi:
           type: string
